now its complete

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <!-- <script src="/Function/script2.js"></script> -->
     <!-- <script src="/Array/script3.js"></script> -->
     <!-- <script src="/Array/script4.js"></script>   -->
-    <!-- <script src="/Array/script5.js"></script> -->
+    <!-- <script src="/objects/script5.js"></script> -->
      <!-- <script src="DOM/dom.js"></script> -->
     <!-- <script src="DOM/dom1.js"></script> -->
     <script src="DOM/dom2.js"></script>
